css fix for bottom spacing

--- a/public/bootstrap/less/trp3.less
+++ b/public/bootstrap/less/trp3.less
@@ -770,13 +770,20 @@ a.trpMiniLeftMenuItem {
 	text-decoration: underline;
 }
 
+.trpFramePanel {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
+
 .trpContentPanel {
 /*  display: inline-block;*/
   position: fixed;
 	background-color: white;
 	margin-left: 0px;
-/*  height is now specified in the html for as it renders better before the css is loaded*/
-	height: 100%;   
+/*  height is now specified in the html for as it renders better before the css is loaded*/  
 	width: 100%;
 	text-align: center;
 /*	padding-top: 40px;*/
@@ -790,6 +797,8 @@ a.trpMiniLeftMenuItem {
   overflow: none;
   .transition500ms;
 }
+
+
 
 .trpContentSpacer {
 	width: 100%;
